Исправлены параметризированные тесты